# FakeNews

./: README.md  apple_environmental_commitment.txt  demo.py  document_processor.py  hypocrisy_detector.db  hypocrisy_detector.py  main.py  news_monitor.py  pyproject.toml  requirements.txt  start.py  vector_index.faiss  vector_index_metadata.json
.claude/: settings.local.json
backend/: __init__.py  ai_service.py  database.py  document_processor.py  main.py  news_service.py  vector_store.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ContradictionBadge.jsx  LoadingSpinner.jsx  Navbar.jsx
frontend/src/context/: WebSocketContext.jsx
frontend/src/pages/: Analysis.jsx  CompanyDetail.jsx  Dashboard.jsx  News.jsx  Settings.jsx
frontend/src/services/: api.js
